# unicef-ai4d-air-quality

./: .editorconfig  .env.example  .flake8  .flake8_nb  .pre-commit-config.yaml  Makefile  README.md  catalog-info.yaml  mkdocs.yaml  pyproject.toml  pyrightconfig.json  requirements.in  requirements.txt
.github/: .tracking  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: run_checks.yml
.templates/dvc/: .pre-commit-config.yaml
.templates/jupyter/: .pre-commit-config.yaml
checklist/: 01_data_gathering.md  02_building_the_base_table.md  03_method_deployment.md  04_initial_experimentation.md  05_model_benchmarking.md  06_finalize_model.md  07_present_results.md  08_model_iteration.md  09_scale_and_deploy_model.md  10_documentation.md
ci/: install_deps.sh  minimal.sh
config/: 2022-04-06_22-06-01_rf_0.81r2.yaml  2022-04-06_22-08-10_xgb_0.82r2.yaml  2022-04-06_22-16-18_lgbm_0.82r2.yaml  README.md  default.yaml
config/2022-04-21-full-air4thai-dataset/: 2022-04-21_lgbm_0.83r2.yaml  2022-04-21_lr_0.52r2.yaml  2022-04-21_svr_0.58r2.yaml  2022-04-21_xgb_0.83r2.yaml
config/2022-05-18-openaq-dataset/: 2022-05-18_lgbm_0.84r2.yaml  2022-05-18_lr_0.48r2.yaml  2022-05-18_rf_0.83r2.yaml  2022-05-18_svr_0.63r2.yaml  2022-05-18_xgb_0.87r2.yaml
notebooks/: README.md  openaq_data_collection.ipynb  openaq_data_collection.py
notebooks/2022-05-04-admin-boundaries/: 2022-05-04-admin-boundaries.ipynb  2022-05-04-admin-boundaries.py
notebooks/2022-05-18-prediction-example/: 2022-05-18-prediction-example.ipynb  2022-05-18-prediction-example.py
notebooks/2022-05-18-prediction-example/data/: mueang_chiang_mai_tile_centroids.csv
notebooks/__examples__/2021-07-23-sample-data-preprocssing/: 2021-07-23-data_wrangling.ipynb
scripts/: collect_openaq.py  evaluate.py  generate_data.py  generate_dataset.py  generate_training_dataset.py  predict.py  train.py
src/: models.py  sample.py  settings.py
src/config/: models.py  settings.py
src/data_collection/: openaq.py
src/data_processing/: admin_bounds.py  aod.py  era5.py  feature_collection_pipeline.py  gee_utils.py  general_utils.py  geom_utils.py  hrsl.py  ndvi.py
src/data_processing/gee/: aod.py  era5.py  gee_utils.py  ndvi.py  preprocessors.py
src/modelling/: clf_utils.py  data_utils.py  eval_utils.py  model_utils.py  reg_utils.py
src/prediction/: predict_utils.py
tests/: test_file.py  test_sample.py
