[tool.poetry]
name = "unicef-ai4d-air-quality"
version = "0.1.0"
description = """Repo for providing code to replicate air quality research work and utilize any trained models that are released."""
authors = []

[tool.poetry.dependencies]
python = "~3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
ipykernel = "^6.10.0"
jupyter = "^1.0.0"
jupyterlab = "^3.3.2"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
# for compatibility with black
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=isort#how-black-wraps-lines

multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
